Added github link and changed version

--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ Theme URI: http://raratheme.com/wordpress-themes/rara-academic/
 Template: rara-academic-custom
 Author: Rara Theme
 Author URI: http://raratheme.com/
+GitHub Theme URI: https://github.com/davydovmax/rara-academic-custom-child
 Description: Rara Academic WordPress theme is a perfect solution for LMS, Training Center, College, Academy, University, Primary School, High school and Kindergarten. Whether you are running a training center or a college, Rara Academic theme will meet your expectation and give your customer a great experience. The theme is responsive/mobile-friendly and so your website will look gorgeous in the mobile and tablet devices. It is also translation ready.
 Tags: translation-ready,custom-background,theme-options,custom-menu,post-formats,threaded-comments,blog,two-columns,right-sidebar,footer-widgets,education
-Version: 1.0.4.1486305580
+Version: 1.0.0
 */
-
